UI item > item-list change name to item-kategori; note : item-kategori need to fix, it's not responsive while on phone

--- a/tubes/src/Item_UI/item kategori/item-kategori.css
+++ b/tubes/src/Item_UI/item kategori/item-kategori.css
@@ -111,82 +111,17 @@
         background-color: #920f00;
     }
 
-    /* ------------------------------------------------ hero */
-    .heroimage {
-        background-image: url(../../image/mentah/ruang_rumahsakit.png) !important;
-        background: no-repeat center center;
-        background-size: cover;
-        min-height: 80vh;
-        position: relative;
-        color: white;
-    }
-
-    .color-overlay {
-        position: absolute;
-        width: 100%;
-        height: 80vh;
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-
-
-
-    /* ------------------- search bar*/
-    .search-bar {
-        width: 100%;
-        max-width: 700px;
-        background: rgba(255, 255, 255, 0.2);
-        display: flex;
-        align-items: center;
-        border-radius: 60px;
-        padding: 10px 20px;
-    }
-
-    .search-bar input {
-        background: transparent;
-        flex: 1;
-        border: 0;
-        outline: none;
-        padding: 24px 20px;
-        font-size: 20px;
-        color: #ffffff;
-    }
-
-    ::placeholder {
-        color: #919fa5;
-    }
-
-    .search-bar p {
-        font-size: 25px;
-        padding-top: 10px;
-        margin-right: 5px;
-    }
-
-    .search-bar button {
-        color: rgb(134, 186, 235);
-        font-size: 25px;
-    }
-
-    .search-bar button :hover {
-        color: rgb(42, 105, 240);
-    }
-
-    /* ---------------------------------------------- container-Ipage */
-    .Ipage {
-        display: flex;
-        position: relative;
-        height: 800px;
-    }
-
+    /* ----------------------------------------------------------------- ITEM KATEGORI */
     /* --------------------------------------------- item-page */
     .bgcolor {
         display: flex;
         position: relative;
-        height: 800px;
-        background-color: #ffffff;
+        height: 700px;
+        background-color: rgb(245, 245, 245);
     }
 
     .bggrey {
-        background-color: rgb(235, 235, 235);
+        background-color: rgb(230, 230, 230);
         width: 100%;
         height: 200px;
         display: flex;
@@ -194,11 +129,13 @@
 
     }
 
+
     /* --------------------------------------------- item-list */
     .container-item {
-        background-color: wheat;
-        border: red 2px solid;
-        height: 800px;
+        background-color: rgb(255, 255, 255);
+        /* border: red 2px solid; */
+        border-radius: 10px;
+        height: 500px;
         position: absolute;
         margin-left: auto;
         margin-right: auto;
@@ -206,7 +143,7 @@
         right: 0;
         text-align: center;
         margin-top: 100px;
-
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
     }
 
     .item-list {
@@ -227,10 +164,15 @@
 
     .item-list-menu {}
 
+    .bgcolor h5 {
+        position: absolute;
+    }
+
+
     /* ---------------------------------- input-group  */
     .input-group {
         margin-top: 20px;
-        border: blue 2px solid;
+        /* border: blue 2px solid; */
         margin-left: auto;
         margin-right: auto;
         left: 0;
@@ -240,18 +182,29 @@
     }
 
     .item-form-control {
-        height: 45px;
+        height: 55px;
     }
 
     .item-form button {
-        background-color: #f7341e;
-        color: white;
         font-size: 20px;
+    }
+
+    .item-form button {
+        background-color: #e74c3c;
+        color: white;
+
+    }
+
+    .item-form button:hover {
+        background-color: #920f00;
+        color: white;
     }
 
     /* ------------------------------------------------- kategori obat */
     .kategori-obat {
-        border: #f7341e 2px solid;
+        /* border: #f7341e 2px solid; */
+        margin-top: 30px;
+        margin-left: 20px;
     }
 
     .kategori-obat h2 {
